business domain parse